fix 🔧: fix `Tags` component wrapping

--- a/styles/pages/article.module.scss
+++ b/styles/pages/article.module.scss
@@ -57,6 +57,7 @@
     }
 
     .tags {
+      flex-wrap: wrap;
       margin-block: 1rem;
     }
   }
